// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders primary button 1`] = `
<button
  className="Button primary"
  onClick={undefined}
>
  somebutton
</button>
`;

exports[`renders secondary button 1`] = `
<button
  className="Button secondary"
  onClick={undefined}
>
  somebutton
</button>
`;
